# rl_deploy

./: .gitattributes  .gitignore  1.md  README.md  environment.yml
moqi_workspace/IK/: .~lock.解析解原理.odg#  analytic_IK.py  collision_check.py  utils.py  解析解原理.odg
moqi_workspace/openarm/: openarm_controller.py  openarm_controller_2.py  readme.txt
moqi_workspace/openarm/openarm_can/: .clang-format  .gitignore  .packit.yaml  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  OpenArmCANConfig.cmake.in  README.md  Rakefile  helper.rb  openarm-can.pc.in
moqi_workspace/openarm/openarm_can/python/: README.md  build.sh  meson.build  pyproject.toml  requirements.txt
moqi_workspace/openarm/openarm_can/python/examples/: example.py
moqi_workspace/openarm/openarm_can/python/openarm/can/: __init__.py  core.py
moqi_workspace/openarm/openarm_can/python/src/: openarm_can.cpp
moqi_workspace/openarm/openarm_can/python/subprojects/: .gitignore  nanobind.wrap  robin-map.wrap
moqi_workspace/openarm/openarm_description/: .gitignore  .pre-commit-config.yaml
moqi_workspace/openarm/openarm_grpc/: README.md  __init__.py  grpc_client.py  grpc_server.py  openarm_service.proto  openarm_service_pb2.py  openarm_service_pb2_grpc.py  quick_start.md  start_server.py  usage_guide.md
moqi_workspace/openarm/openarm_teleop/: .cmake-format.py  .editorconfig  .gitignore  .pre-commit-config.yaml  .shellcheckrc  CMakeLists.txt  CONTRIBUTING.md  README.md
moqi_workspace/openarm/openarm_teleop/.github/ISSUE_TEMPLATE/: 1-bug-report.yml  config.yml
moqi_workspace/openarm/openarm_teleop/.github/workflows/: test.yaml
moqi_workspace/openarm/openarm_teleop/config/: follower.yaml  leader.yaml
moqi_workspace/openarm/openarm_teleop/control/: gravity_compasation.cpp  openarm_bilateral_control.cpp  openarm_communication_test.cpp  openarm_unilateral_control.cpp
moqi_workspace/openarm/openarm_teleop/script/: launch_bilateral.sh  launch_grav_comp.sh  launch_unilateral.sh
moqi_workspace/openarm/openarm_teleop/src/: joint_state_converter.hpp  openarm_constants.hpp  periodic_timer_thread.hpp  robot_state.hpp  yamlloader.hpp
moqi_workspace/openarm/openarm_teleop/src/controller/: control.cpp  control.hpp  diff.hpp  dynamics.cpp  dynamics.hpp
moqi_workspace/openarm/openarm_teleop/src/openarm_port/: joint_mapper.cpp  joint_mapper.hpp  openarm_init.cpp  openarm_init.hpp
moqi_workspace/pyroki/: README_left_to_right.md  analyze_ik_performance.py  data_recorder.py  diagnose_failures.py  ik_performance_monitor.py  left_to_right_control.py  main.py  main_v1.py  main_v2.py  main_v3.py  main_v4.py  main_v4_backup.py  openarm_connect.md  plot.py  readme.txt  realsense_camera.py  right_to_left_control.py  robot_ik_solver.py  test_ik_monitor.py  transform_utils.py  upper_body_solver.py  viser_base.py  viser_ui.py  vr.py  workspace_constraint.py
moqi_workspace/pyroki/config/: robot.yaml  robot_mobile.yaml  ros_interface.yaml  solver.yaml  viser.yaml  vr.yaml
moqi_workspace/pyroki/log/: ik_performance_20251127_162154.csv  ik_performance_20251127_165203.csv  ik_performance_20251127_165355.csv  ik_performance_20251127_170752.csv  ik_performance_20251127_175717.csv  ik_performance_20251127_180103.csv  ik_performance_20251127_180722.csv  ik_performance_20251127_181800.csv  ik_performance_20251127_202120.csv  ik_performance_20251127_202253.csv  ik_performance_20251127_202532.csv  teleop_20251127_162154.json  teleop_20251127_165132.json  teleop_20251127_165354.json  teleop_20251127_170719.json  teleop_20251127_175658.json  teleop_20251127_180103.json  teleop_20251127_180721.json  teleop_20251127_181738.json  teleop_20251127_202057.json  (+19 more)
moqi_workspace/rl_deploy/: openarm_env.py  run_actor.sh  run_learner.sh  train_rl.py
moqi_workspace/rl_deploy_2/: mock_hardware.py  openarm_env.py  openarm_server.py  rl_success_demos.pkl  run_actor.sh  run_learner.sh  train_pick_place.py
serl/: README.md
(+78 files in other folders)
