# Copyright 2025 Enactic, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
authors = [{name = "Enactic, Inc."}]
license = "Apache-2.0"
# license-files = ["../LICENSE.txt"]
maintainers = [{name = "Enactic, Inc."}]
name = "openarm_can"
readme = "README.md"
requires-python = ">= 3.10"
version = "1.0.0"

[project.urls]
# TODO: changelog = "https://github.com/reazon-research/openarm_socketcan/releases"
# TODO: documentation = "https://..."
# TODO: homepage = "https://open-arm.org/"
# TODO: issues = "https://github.com/reazon-research/openarm_socketcan/issues"
# TODO: repository = "https://github.com/reazon-research/openarm_socketcan.git"

[tool.autopep8]
